styles/main.scss
@import "_themes.scss";

$checkColor: var(--success);
$removeColor: var(--error);
$editColor: var(--warning);

.main {
  text-align: left;
  padding: 3em 6%;
  margin-right: auto;
  margin-left: auto;
  height: 100%;
  width: 100%;
  max-width: 1080px;
  .main__create-container {
    color: var(--fontColorPrimary);
    background-color: var(--backgroundPrimary);
    min-height: 220px;
    width: 100%;
    padding: 30px;
    margin: 20px 0;
    border-radius: 8px;
    .main__create {
      display: flex;
      flex-direction: column;
      border-radius: 5px;
      .main__input-container {
        display: flex;
        align-items: center;
        justify-content: space-between;
        .create__label-input {
          display: block;
          margin: 0 2%;
        }
        .main__input{
          font-size: 16px;
          color: var(--fontColorPrimary);
          background-color: var(--backgroundColorPrimary);
          outline: none;
          border: 1px solid var(--grayPrimary);
          border-radius: 3px;
          height: 45px;
          width: 100%;
          margin: 10px 0;
          padding: 0 0 0 10px;
        }
        .create__label {
        }
      }
      .create__add-button {
        position: relative;
        top: 15px;
        width: 100%;
        margin: 0 2%;
        .create__add {
          height: 45px;
          width: 150px;
          color: white;
          font-size: 18px;
          background-color: var(--colorPrimary);
          outline: none;
          border: none;
          border-radius: 5px;
          transition: 100ms ease-in-out background-color;
          &:hover {
            background-color: #3059de;
          }
        }
      }
    }
  }
  .create__header {
    color: var(--colorPrimary);
    margin: 0;
    padding: 0;
    font-weight: 600;
  }

  &__title-input {
    height: 35px;
  }
  &__note-input {
    height: 35px;
  }
  .react-datepicker-wrapper {
    display: block !important;
  }
  &__title {
    font-weight: 400;
  }
  &__note {
    color: var(--grayPrimary);
    margin-left: auto;
  }
  &__due-date {
    word-spacing: 2px;
    margin-left: auto;
    color: var(--success);
    &--current {
      color: var(--success);
    }
    &--future {
      color: var(--grayPrimary);
    }
    &--past {
      color: var(--error);
    }
  }

  &__icon {
    color: var(--grayPrimary);
    font-size: 28px;
    margin: 0 2px;
    transition: 100ms ease-in-out all;
    path:first-child {
      pointer-events: none;
    }
  }

  &__check-icon {
    &:hover {
      color: $checkColor;
    }
    &--complete{
      color: $checkColor;
    }
  }

  &__remove-icon {
    &:hover {
      color: $removeColor;
    }
  }

  &__edit-icon {
    padding: 2px;
    font-size: 24px;
    border: 2px solid var(--grayPrimary);
    border-radius: 50%;
    &:hover {
      color: $editColor;
      border: 2px solid $editColor;
    }
  }
  &__todo-list,
  &__completed-list {
    display: flex;
    flex-direction: column;
    width: 100%;
    border-radius: 5px;
    margin: 10px 0;
  }
  .main__todo {
    display: flex;
    align-items: center;
    position: relative;
    margin: 8px 0;
    width: 100%;
    border-radius: 5px;
    color: var(--fontColorPrimary);
    background-color: var(--backgroundPrimary);
  }
}

.main__sidebar{
  position: absolute;
  top: 0;
  left: 0;
  margin: 2rem;
  .main__sidebar-icon{
    color: var(--colorPrimary);
    font-size: 28px;
  }
}

.main__actions{
  display: flex;
  align-items: center;
  height: fit-content;
}

@media(max-width: 640px){
  .main__actions, .main__title, .main__due-date{
    min-width: 100%;
    width: 100%;
  }

  .main__actions{
    svg{
      margin: 0 2px;
    }
  }
  .main__title, .main__due-date{
  }

  .main__due-date, .main__note{
    font-size: 13px;
  }

  .main__title{
    margin: 5px 0;
  }
  .main__note{
    position: absolute;
    right: 0;
    margin: 0 10px 0 0;
  }
  .main__todo{
    flex-wrap: wrap;
    height: 125px;
    padding: 15px;
    span {
      padding: 0 15px 0 5px;
    }
  }
  .main__input-container{
    flex-direction: column;
    padding: 0;
    .create__label-input{
      width: 100%;
    }
  }
}
@media(min-width: 640px){
  .main__todo{
    height: 60px;
    padding: 0 25px;
    span {
      padding: 0 15px;
    }
  }
}
@media(min-width: 768px){
}
@media(min-width: 1024px){
}
@media(min-width: 1280px){
}

